# IoT-Weather-System

./: .gitignore  README.md  app.py  create_keys.sh  data_processing.py  device.py  docker-compose.yml  environment.py  requirements.txt  server.py  thermometer.py
db-connection/: Cargo.toml
db-connection/src/: data.rs  lib.rs  no_connection_error.rs  sensor_data.rs
devices/: Protocol.md  __init__.py  b7490.py  device.py  devices.ino  mock.py  thermometer.py
iot-server/: Cargo.toml  Dockerfile
iot-server/src/: main.rs  server.rs
iot-server/src/db_connection/: mod.rs  sensor_data.rs
iot-server/src/server/: data_processing.rs  logging.rs
iot-server/src/server/data_processing/: no_connection_error.rs  sensor_data.rs
weather-api/: Cargo.toml  Dockerfile.weather-api
weather-api/src/: database.rs  main.rs  socket_server.rs  temperature_socket.rs
weather-api/src/database/: device.rs  no_data_error.rs
weather-api/src/database/connection/: mod.rs  sensor_data.rs
weather-api/src/socket_server/: temperature_socket.rs
weather-app/: Cargo.toml  build.rs
weather-app/src/: database.rs  main.rs  socket_server.rs
weather-app/src/socket_server/: temperature_socket.rs
weather-app/src/socket_server/temperature_socket/: database.rs
weather-app/src/socket_server/temperature_socket/database/: no_data_error.rs
weather-app/src/temperature_socket/: database.rs  mod.rs
weather-app/src/weather-frontend/: package-lock.json  package.json  webpack.config.js
weather-app/src/weather-frontend/src/: App.css  App.js  App.jsx  DeviceList.jsx  TemperatureBox.jsx  index.js
weather-frontend/: Dockerfile  bun.lockb  package-lock.json  package.json
weather-frontend/src/: types.ts
weather-frontend/src/app/: globals.css  layout.tsx  page.tsx
weather-frontend/src/components/: LiveData.tsx  PickDecive.tsx  WeatherChart.tsx
