[package]
name = "db-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6.0"
chrono = { version = "0.4.25", features = ["serde"] }
serde_json = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
