[package]
name = "weather-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.3.1"
actix = "0.13.0"
actix-web-actors = "4.2.0"
static-files = "0.2.1"
async-trait = "0.1"
serde_json = "1.0"
crossbeam = "0.8.2"
once_cell = "1.18.0"
lazy_static = "1.4.0"
mongodb = "2.6.0"
chrono = { version = "0.4.25", features = ["serde"] }
bson = "2.11.0"
byteorder = "1.5.0"


